Added default JVM args to enable experimental features